added styling for login page

--- a/ao3_web_reader/blueprints/auth/templates/login.html
+++ b/ao3_web_reader/blueprints/auth/templates/login.html
@@ -1,36 +1,21 @@
 {% extends "base.html" %}
 {% block content %}
 
-<div>
-    <form action="{{ url_for('auth.login') }}" method="POST">
-        {{ login_form.csrf_token }}
+<div class="main-container">
+    <div>
+        AO3 Reader
+    </div>
+    <div class="login-container">
+        <form action="{{ url_for('auth.login') }}" method="POST">
+            {% with form=login_form %}
+                {% include "components/form.html" %}
+            {% endwith %}
 
-        <div>
-            {% for field in login_form %}
-                {% if field.type not in login_form.html_ignored_fields %}
-                    <div>
-                        <label for='{{ field.label }}'>
-                            {{ field.label }}
-                        </label>
-                        <span>
-                            {{ field }}
-                        </span>
-                    </div>
-                    <div>
-                        {% for error in field.errors %}
-                            <span>
-                                {{ error }}
-                            </span>
-                        {% endfor %}
-                    </div>
-                {% endif %}
-            {% endfor %}
-        </div>
-
-        <button type="submit">
-            Login
-        </button>
-    </form>
+            <button class="login-btn btn btn-primary" type="submit">
+                Login
+            </button>
+        </form>
+    </div>
 </div>
 
 {% endblock %}
