--- a/ao3_web_reader/templates/base.html
+++ b/ao3_web_reader/templates/base.html
@@ -3,7 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
         <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+
         <script src="{{ url_for('static', filename='main.js') }}"></script>
 
         <title>AO3 Reader</title>
@@ -11,9 +14,9 @@
     <body>
         {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
-            <div>
+            <div class="flashed-messages-container">
               {% for category, message in messages %}
-                <div>
+                <div class="flashed-message-container flashed-message-container-{{ category }}">
                     <span>
                         {{ message }}
                     </span>
@@ -24,5 +27,7 @@
         {% endwith %}
         {% block content %}
         {% endblock %}
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     </body>
 </html>
