--- a/ao3_web_reader/static/main.css
+++ b/ao3_web_reader/static/main.css
@@ -1,9 +1,3 @@
-html, body {
-    height: 100%;
-    width: 100%;
-    margin: 0;
-}
-
 body {
     background-color: #1A1A1D !important;
 }
@@ -16,10 +10,21 @@ body {
 }
 
 .login-container {
-    margin: auto;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
     background-color: #4E4E50;
     padding: 30px;
     border-radius: 10px;
+}
+
+.main-navbar {
+    background-color: #4E4E50;
+}
+
+.navbar-logo {
+    color: #ffffff !important;
 }
 
 .flashed-messages-container {
