--- a/ao3_web_reader/static/main.css
+++ b/ao3_web_reader/static/main.css
@@ -23,8 +23,84 @@ body {
     background-color: #4E4E50;
 }
 
+.nav-item a {
+    color: #ffffff;
+    text-transform: uppercase;
+}
+
 .navbar-logo {
     color: #ffffff !important;
+}
+
+.navbar-nav {
+    gap: 0 20px !important;
+}
+
+.main-content-wrapper {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin-bottom: 20px;
+}
+
+.data-container {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+    gap: 10px 0;
+}
+
+.data-item {
+    width: 100%;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #72727c;
+    border-radius: 6px;
+}
+
+.data-form-wrapper {
+    padding: 20px;
+    background-color: #72727c;
+    border-radius: 6px;
+}
+
+.item-title {
+
+}
+
+.item-title a {
+    color: #ffffff;
+}
+
+.item-content-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.content-item {
+
+}
+
+.content-item-name {
+    font-weight: 600;
+}
+
+.running-processes-wrapper {
+    background-color: #72727c;
+    padding: 20px;
+    width: 100%;
+    border-radius: 6px;
+}
+
+.running-processes-title {
+    text-align: center;
+    margin-bottom: 10px;
+    font-weight: 600;
 }
 
 .flashed-messages-container {
@@ -70,6 +146,10 @@ body {
     .login-container {
         width: 95%;
     }
+
+    .data-container {
+        width: 90% !important;
+    }
 }
 
 @media (max-width: 768px) {
@@ -77,7 +157,9 @@ body {
 }
 
 @media (max-width: 992px) {
-
+    .data-container {
+        width: 70%;
+    }
 }
 
 @media (max-width: 1200px) {
