added getting works with chapters and content

--- a/ao3_web_reader/blueprints/works/templates/works.html
+++ b/ao3_web_reader/blueprints/works/templates/works.html
@@ -3,20 +3,24 @@
 
 <div class="main-content-wrapper">
     <div class="data-container">
-        {% for _ in range(10) %}
-           <div class="data-item">
-                <div class="item-title">
-                    <a href="#">
-                        Work #0
-                    </a>
-                </div>
-                <div class="item-content-wrapper">
-                    <div class="content-item">
-                       <span class="content-item-name">Chapters:</span> 12
+        {% if works|length > 0 %}
+            {% for work in works %}
+               <div class="data-item">
+                    <div class="item-title">
+                        <a href="#">
+                            {{ work.name }}
+                        </a>
+                    </div>
+                    <div class="item-content-wrapper">
+                        <div class="content-item">
+                           <span class="content-item-name">Chapters:</span> {{ work.chapters|length }}
+                        </div>
                     </div>
                 </div>
-            </div>
-        {% endfor %}
+            {% endfor %}
+        {% else %}
+            <p>No works to show</p>
+        {% endif %}
     </div>
 </div>
 
