--- a/ao3_web_reader/blueprints/works/templates/add_work.html
+++ b/ao3_web_reader/blueprints/works/templates/add_work.html
@@ -2,7 +2,7 @@
 {% block page_content %}
 
 <div class="main-content-wrapper">
-    <div class="data-container">
+    <div class="main-content-container">
         <div class="data-form-wrapper">
             <form action="{{ url_for('works.add_work') }}" method="POST">
                 {% with form=add_work_form %}
@@ -16,7 +16,7 @@
         </div>
     </div>
 
-    <div class="data-container">
+    <div class="main-content-container">
         <div class="running-processes-wrapper">
             <div class="running-processes-title">
                 Running Processes
