--- a/ao3_web_reader/static/main.css
+++ b/ao3_web_reader/static/main.css
@@ -156,6 +156,14 @@ body {
     justify-content: space-between;
 }
 
+.manage-work-buttons-container button {
+    width: 100%;
+}
+
+.manage-work-buttons-container a {
+    width: 100%;
+}
+
 .pagination-controls-item {
     color: #ffffff;
 }
