--- a/ao3_web_reader/templates/page_layout.html
+++ b/ao3_web_reader/templates/page_layout.html
@@ -4,11 +4,11 @@
 {% set menuItems = [
   {
     'title': 'Tags',
-    'url': url_for('main.tags'),
+    'url': url_for('tags.all_tags'),
   },
   {
     'title': 'Add Tag',
-    'url': url_for('main.add_tag'),
+    'url': url_for('tags.add_tag'),
   },
   {
     'title': 'Add Work',
