--- a/ao3_web_reader/blueprints/tags/templates/add_tag.html
+++ b/ao3_web_reader/blueprints/tags/templates/add_tag.html
@@ -4,7 +4,7 @@
 <div class="main-content-wrapper">
     <div class="main-content-container">
         <div class="data-form-wrapper">
-            <form action="{{ url_for('main.add_tag') }}" method="POST">
+            <form action="{{ url_for('tags.add_tag') }}" method="POST">
                 {% with form=add_tag_form %}
                     {% include "components/form.html" %}
                 {% endwith %}
