--- a/ao3_web_reader/blueprints/tags/templates/tags.html
+++ b/ao3_web_reader/blueprints/tags/templates/tags.html
@@ -12,7 +12,7 @@
                         </a>
                     </div>
                    <div class="work-management-wrapper">
-                        <a href="{{ url_for('main.tag_management', tag_name=tag.name) }}">
+                        <a href="{{ url_for('tags.tag_management', tag_name=tag.name) }}">
                             Manage
                         </a>
                     </div>
