--- a/ao3_web_reader/blueprints/main/templates/index.html
+++ b/ao3_web_reader/blueprints/main/templates/index.html
@@ -7,7 +7,7 @@
             {% for message in messages %}
                <div class="content-item">
                     <div class="item-title">
-                        {{ message.date }}
+                        {{ message.date.isoformat(' ', 'seconds') }}
                     </div>
                     <div class="item-content-wrapper">
                         <div>
