scrapping works refactoring for getting process progress

--- a/ao3_web_reader/blueprints/works/templates/add_work.html
+++ b/ao3_web_reader/blueprints/works/templates/add_work.html
@@ -22,11 +22,16 @@
                 <div class="running-processes-title">
                     Running Processes
                 </div>
-                {% for process_data in running_processes %}
-                    <div class="running-process-name">
-                        {{ process_data['work_title'] }}
-                    </div>
-                {% endfor %}
+                <div class="running-processes-container">
+                    {% for process_data in running_processes %}
+                        <div class="running-process-name">
+                            {{ process_data['work_title'] }}
+                        </div>
+                        <div class="running-process-progress">
+                            {{ process_data['progress'] }}%
+                        </div>
+                    {% endfor %}
+                </div>
             </div>
         {% endif %}
     </div>
