--- a/ao3_web_reader/static/main.css
+++ b/ao3_web_reader/static/main.css
@@ -105,12 +105,24 @@ body {
     padding: 20px;
     width: 100%;
     border-radius: 6px;
+    display: flex;
+    flex-direction: column;
+    gap: 0 10px;
 }
 
 .running-processes-title {
     text-align: center;
     margin-bottom: 10px;
     font-weight: 600;
+}
+
+.running-processes-container {
+    display: flex;
+    justify-content: left;
+}
+
+.running-process-progress {
+    margin-left: auto;
 }
 
 .flashed-messages-container {
