some styling + queries tweaks + updated Dockerfile for RPi deployment

--- a/ao3_web_reader/static/main.css
+++ b/ao3_web_reader/static/main.css
@@ -119,6 +119,7 @@ body {
 .running-processes-container {
     display: flex;
     justify-content: left;
+    flex-direction: column;
 }
 
 .running-process-progress {
