fixed flash message typo + running process container styling

--- a/ao3_web_reader/static/main.css
+++ b/ao3_web_reader/static/main.css
@@ -122,6 +122,10 @@ body {
     flex-direction: column;
 }
 
+.running-process-container {
+    display: flex;
+}
+
 .running-process-progress {
     margin-left: auto;
 }
