added displaying work name in chapters preview + tweaked words breaking

--- a/ao3_web_reader/static/main.css
+++ b/ao3_web_reader/static/main.css
@@ -52,6 +52,14 @@ body {
     gap: 10px 0;
 }
 
+.main-content-title {
+
+}
+
+.chapter-title-content-wrapper {
+    word-break: break-all;
+}
+
 .content-item {
     width: 100%;
     padding: 20px;
