--- a/ao3_web_reader/blueprints/main/templates/index.html
+++ b/ao3_web_reader/blueprints/main/templates/index.html
@@ -11,7 +11,7 @@
                     </div>
                     <div class="item-content-wrapper">
                         <div>
-                            {{ message.get_message() }}
+                            Added {{ message.chapter_name }} to <a href="{{ url_for('works.chapters', work_id=message.work.work_id) }}">{{ message.work.name }}</a>.
                         </div>
                     </div>
                 </div>
