--- a/ao3_web_reader/blueprints/main/templates/index.html
+++ b/ao3_web_reader/blueprints/main/templates/index.html
@@ -10,8 +10,8 @@
                         {{ message.date.isoformat(' ', 'seconds') }}
                     </div>
                     <div class="item-content-wrapper">
-                        <div>
-                            Added {{ message.chapter_name }} to <a href="{{ url_for('works.chapters', work_id=message.work.work_id) }}">{{ message.work.name }}</a>.
+                        <div class="update-message-container">
+                            Added "{{ message.chapter_name }}" to <a href="{{ url_for('works.chapters', work_id=message.work.work_id) }}">{{ message.work.name }}</a>.
                         </div>
                     </div>
                 </div>
