--- a/ao3_web_reader/static/main.css
+++ b/ao3_web_reader/static/main.css
@@ -87,6 +87,7 @@ body {
     align-items: center;
     background-color: #72727c;
     border-radius: 6px;
+    position: relative;
 }
 
 .update-message-container a {
@@ -106,7 +107,9 @@ body {
 }
 
 .item-title {
-
+    width: 80%;
+    display: flex;
+    justify-content: center;
 }
 
 .item-title a {
@@ -118,6 +121,14 @@ body {
     flex-direction: column;
     align-items: flex-start;
     width: 100%;
+}
+
+.work-management-wrapper {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 15px;
 }
 
 .work-management-wrapper a {
@@ -220,6 +231,26 @@ body {
 
 .left-p-controls-item {
     margin-left: auto
+}
+
+.delete-icon-wrapper {
+    position: absolute;
+    right: 5px;
+    top: 5px;
+}
+
+.chapters-container-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 20px 0;
+    width: 100%;
+}
+
+.chapters-wrapper {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 15px 0;
 }
 
 @media (max-width: 576px) {
