added api routes + icon showing if WorksUpdaterProcess is running

--- a/ao3_web_reader/static/main.css
+++ b/ao3_web_reader/static/main.css
@@ -253,6 +253,10 @@ body {
     gap: 15px 0;
 }
 
+.navbar-title-wrapper {
+    display: flex;
+}
+
 @media (max-width: 576px) {
     .login-container {
         width: 95%;
