--- a/ao3_web_reader/static/main.css
+++ b/ao3_web_reader/static/main.css
@@ -257,6 +257,10 @@ body {
     display: flex;
 }
 
+.sync-progress {
+
+}
+
 @media (max-width: 576px) {
     .login-container {
         width: 95%;
