--- a/ao3_web_reader/static/main.css
+++ b/ao3_web_reader/static/main.css
@@ -127,8 +127,9 @@ body {
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     margin-top: 15px;
+    align-items: center;
+    gap: 0 20px;
 }
 
 .work-management-wrapper a {
@@ -233,7 +234,7 @@ body {
     margin-left: auto
 }
 
-.delete-icon-wrapper {
+.content-item-side-icon-wrapper {
     position: absolute;
     right: 5px;
     top: 5px;
@@ -261,6 +262,14 @@ body {
 
 }
 
+.chapter-completion-wrapper {
+
+}
+
+.chapter-completion-button {
+
+}
+
 @media (max-width: 576px) {
     .login-container {
         width: 95%;
@@ -277,6 +286,15 @@ body {
     .chapter-controls-wrapper {
         flex-direction: column !important;
         gap: 20px 0 !important;
+    }
+
+    .chapter-completion-button {
+        width: 100%;
+        margin-bottom: 10px;
+    }
+
+    .chapter-completion-wrapper {
+        width: 100%;
     }
 }
 
