--- a/ao3_web_reader/static/main.css
+++ b/ao3_web_reader/static/main.css
@@ -278,6 +278,15 @@ body {
     color: #fff
 }
 
+.search-bar-wrapper {
+    display: flex;
+    width: 100%;
+}
+
+.search-bar-wrapper form {
+    width: 100%;
+}
+
 @media (max-width: 576px) {
     .login-container {
         width: 95%;
