--- a/ao3_web_reader/static/main.css
+++ b/ao3_web_reader/static/main.css
@@ -287,6 +287,10 @@ body {
     width: 100%;
 }
 
+.scraper-processes-container {
+    width: 100%;
+}
+
 @media (max-width: 576px) {
     .login-container {
         width: 95%;
